--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@reduxjs/toolkit": "^1.9.7",
@@ -12,14 +13,23 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "hoc": "^1.1.0",
+    "hooks": "^0.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "state": "^0.2.0",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
